--- a/index.html
+++ b/index.html
@@ -514,15 +514,15 @@
 
       <hr>
       <div class="row">
-        <div class="col-sm-10">
+        <div class="col-sm-10 col-8">
           <p class="copy">&copy; 2019 emedia.com.pl All rights reserved</p>
         </div>
-        <div class="col-sm-1">
+        <div class="col-sm-1 col-4">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
               <a href="#"><i class="fa fa-facebook"></i></a>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 col-6">
               <a href="#"><i class="fa fa-instagram"></i></a>
             </div>
           </div>
